# phobos

./: .gitignore  Cargo.toml  flake.nix  x86_64-unknown-kernel.json
.cargo/: config.toml
book/src/: SUMMARY.md  alloc.md  async.md  bootloader.md  code_structure.md  devices.md  font.md  graphics.md  keyboard.md  mm.md  phys.md  virt.md
kernel/: Cargo.toml  Justfile  build.rs  x86_64-unknown-kernel.json
kernel/.cargo/: config.toml
kernel/src/: aux.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/amd64/: asm.S  bit_ops.rs  const_data.rs  debug.rs  fb.rs  link.ld  mod.rs
kernel/src/arch/amd64/boot/: Cargo.toml
kernel/src/arch/amd64/boot/boot_lib/: Cargo.toml
kernel/src/arch/amd64/boot/boot_lib/src/: lib.rs
kernel/src/arch/amd64/boot/src/: elf.rs  main.rs
kernel/src/arch/amd64/context/: switch.s
kernel/src/arch/amd64/interrupt/: idt.rs  mod.rs
kernel/src/arch/amd64/mem/: mapper.rs  mod.rs  setup.rs
kernel/src/arch/x86_64/: Cargo.toml  init.rs  link.ld  x86_64-unknown-kernel.json
kernel/src/arch/x86_64/boot/: Cargo.toml
kernel/src/arch/x86_64/boot/src/: elf.rs  main.rs  paging.rs
kernel/src/arch/x86_64/src/: config_reg.rs  lib.rs
kernel/src/arch/x86_64/src/mm/: mod.rs  paging.rs  setup.rs
kernel/src/arch/x86_64_uefi/: debug.rs  mod.rs  paging.rs  x86_64-unknown-kernel.json
kernel/src/arch/x86_64_uefi/boot/: lib.rs
kernel/src/arch/x86_64_uefi/boot/src/: elf.rs  main.rs
kernel/src/arch/x86_64_uefi/mem/: mod.rs
kernel/src/data/: bitmap.rs  late_init.rs  list.rs  misc.rs  mod.rs  ptr_list.rs
kernel/src/device/: mod.rs  ps2kb.rs
kernel/src/diag/: logger.rs  mod.rs  panic.rs  terminal.rs
kernel/src/fs/: mod.rs
kernel/src/fs/exfat/: structures.rs
kernel/src/graphics/: fb.rs  fbterm.rs  font.rs  mod.rs
kernel/src/mm/: aux.rs  buddy.rs  mapping.rs  mod.rs
kernel/src/mm/alloc/: frame.rs  mod.rs  phys.rs  setup.rs  stack.rs  tlsf.rs  virt.rs
kernel/src/mm/alloc/liballoc/: Cargo.toml  build.rs
kernel/src/mm/alloc/liballoc/c_src/: liballoc.c  liballoc.h
kernel/src/mm/alloc/liballoc/src/: bindings.rs  lib.rs
kernel/src/proc/: mod.rs  tcb.rs
kernel/src/sync/: irq_lock.rs  mod.rs  spin.rs
kernel/src/task/: executor.rs
libc/: Cargo.toml
libc/src/: lib.rs
