[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-kernel.dependencies]
x86_64 = "0.14.3"
uefi = "0.11.0"
uart_16550 = "0.2.15"
boot = { path = "src/arch/x86_64_uefi/boot" }