[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
spin = "0.9.2"
liballoc = { path = "src/mm/alloc/liballoc" }
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
bit_field = "0.10.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-kernel.dependencies]
x86_64 = "0.14.3"
uefi = { version = "0.11.0", default-features = false }
uart_16550 = "0.2.15"
boot_lib = { path = "src/arch/amd64/boot/boot_lib" }