[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[build-dependencies]
nasm-rs = "0.2.4"

[dependencies]
log = "0.4.14"
spin = "0.9.2"
liballoc = { path = "src/mm/alloc/liballoc" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.10.1"
bitflags = "1.3.2"
arrayvec = { version = "0.7.2", default-features = false }
theban_interval_tree = { git = "https://github.com/yakuri354/interval-tree.git" }
memrange = { git = "https://github.com/yakuri354/memrange.git" }
embedded-graphics-core = "0.3.3"
embedded-graphics = { version = "0.7.1", features = ["nalgebra_support"] }
static_assertions = "1.1.0"
noto-sans-mono-bitmap = "0.1.5"

[target.x86_64-unknown-kernel.dependencies]
ps2 = "0.2.0"
x86_64 = "0.14.7"
pic8259 = "0.10.0"
raw-cpuid = "10.2.0"
uefi = { version = "0.13.0", default-features = false }
uart_16550 = "0.2.15"
boot_lib = { path = "src/arch/amd64/boot/boot_lib" }
