[package]
name = "boot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot_lib = { path = "./boot_lib" }
uefi = { version = "0.11.0", features = ["logger", "exts"] }
uefi-services = "0.8.0"
log = "0.4.14"
goblin = { version = "0.4", features = ["elf64", "elf32", "archive", "endian_fd"], default-features = false }
x86_64 = "0.14.3"
uart_16550 = "0.2.15"