[package]
name = "boot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot_lib = { path = "./boot_lib" }
uefi = { version = "0.13.0", features = ["logger", "exts"] }
# uefi-services = "0.10.0"
uefi_services = { git = "https://github.com/rust-osdev/uefi-rs.git", package = "uefi-services" }
log = "0.4.14"
goblin = { version = "0.4.3", features = ["elf64", "elf32", "archive", "endian_fd"], default-features = false }
x86_64 = "0.14.7"
uart_16550 = "0.2.15"
elf_rs = "0.2.0"
arrayvec = { version = "0.7.2", default-features = false }