[package]
name = "boot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.11.0", features = ["logger", "exts"] }
uefi-services = "0.8.0"
log = "0.4.14"
kernel = { path = "../../../../"}