[package]
name = "liballoc"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
log = "0.4.14"
printf-compat = { version = "0.1.1", default-features = false }

[build-dependencies]
cc = { version = "1.0.72", features = ["parallel"] }
